--- a/miniprogram/pages/myDiary/myDiary.wxss
+++ b/miniprogram/pages/myDiary/myDiary.wxss
@@ -118,6 +118,10 @@
   margin-right: 0;
 }
 
+.margin-top-xxl {
+	margin-top: 120rpx;
+}
+
 .cu-form-group .title{
   font-size: 15px !important;
   color: #3a404d !important;
