--- a/miniprogram/pages/myDiary/myDiary.wxss
+++ b/miniprogram/pages/myDiary/myDiary.wxss
@@ -118,10 +118,8 @@
   margin-right: 0;
 }
 
-.margin-top-xxl {
-	margin-top: 120rpx;
-}
-
+/* pages/diaryList/diaryList.wxss */
+/* packageAdmin/pages/pending/pending.wxss */
 .cu-form-group .title{
   font-size: 15px !important;
   color: #3a404d !important;
@@ -301,3 +299,4 @@
       justify-content: center;
       max-width: 100%;
   }
+  
