--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -18,16 +18,28 @@
 		<swiper class="card-swiper round-dot" indicator-dots="true" circular="true" autoplay="true" interval="5000"
 			duration="500" bindchange="cardSwiper" indicator-color="#8799a3" indicator-active-color="#0081ff">
 			<swiper-item wx:for="{{swiperList}}" wx:key='index' class="{{cardCur==index?'cur':''}}">
-				<view class="swiper-item">
+				<view class="swiper-item" style="height: 100% !important;">
 					<card data-item="{{item}}" card="{{item}}" bindtap="showImgList"></card>
 				</view>
 			</swiper-item>
 		</swiper>
 	</view>
 
-	<view class="writeDiary" bindtap="newDiary">
+	<view class="writeDiary"
+		style="position: relative;"
+	>
 		<text class="iconfont icon-add-fill" style="color:rgba(153, 191, 76, 0.871)"></text>
 		<text class="colorgradient">来写一篇日记吧~</text>
+		<view class="cu-form-group"
+			style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;min-height: 0;opacity: 0;"
+		>
+			<view class="title">普通选择</view>
+			<picker bindchange="PickerChange" value="{{index}}" range="{{list}}">
+				<view class="picker">
+					{{list[index]}}
+				</view>
+			</picker>
+		</view>
 	</view>
 
 	<view class="msg">
