--- a/miniprogram/pages/myDiary/myDiary.wxml
+++ b/miniprogram/pages/myDiary/myDiary.wxml
@@ -7,8 +7,8 @@
         </view>
         <!-- 图片 -->
         <view class="cu-list menu sm-border card-menu margin-top">
-            <view class="cu-item" style="font-size: 30rpx;background-color: #d9e895;">
-                <view class="action" style="margin-right: 0;font-size: 30rpx;" bindtap="editShow">
+            <view class="cu-item" style="font-size: 30rpx;background-color: #d9e895;"  bindtap="editShow">
+                <view class="action" style="margin-right: 0;font-size: 30rpx;">
                     <image class="img" src="https://yanglq.xyz/images/plantIcon/duorou18.png" mode='widthFix' ></image>
                     新建日记本
                     <!-- bindtap="NewDiary" -->
@@ -17,7 +17,10 @@
             </view>
         </view>
         <view class="cu-list menu sm-border card-menu margin-top">
-            <view class="cu-item margin-top-sm" style="height: 150rpx;font-size: 30rpx;background-color: #fbfbfb;" wx:for="{{diary}}" wx:for-item="item" wx:key="ID">
+            <view class="cu-item margin-top-sm" style="height: 150rpx;font-size: 30rpx;background-color: #fbfbfb;" wx:for="{{diary}}" 
+            bindtap="change"
+            data-id="{{item.id}}"
+            wx:for-item="item" wx:key="ID">
                 <!-- {{item.name}}{{item.headUrl}} -->
                 <image class="diary_img action" wx:if="{{item.path != ''}}" src="http://yanglq.xyz:4430{{item.headUrl}}" data-index="{{index}}" mode='aspectFill' bindtap="ChooseImage"></image>
                 <image class="diary_img action" wx:if="{{item.path == ''}}" src="{{item.headUrl}}" data-index="{{index}}" mode='aspectFill' bindtap="ChooseImage"></image>
@@ -40,9 +43,9 @@
 <scroll-view scroll-y class="DrawerWindow {{modalName=='viewModal'?'show':''}}">
     <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg">
         <view class="cu-item pend-form" style="height:1250rpx;justify-content:flex-start;opacity:0.8;">
-            <view class="cu-form-group margin-top-xl">
+            <!-- <view class="cu-form-group margin-top-xl">
                 <view class="title margin-left-sm">请输入以下内容：</view>
-            </view>
+            </view> -->
             <!-- 日记名称 -->
             <view class="cu-form-group">
                 <!-- <image class="img" src="https://yanglq.xyz/images/plantIcon/duorou18.png" mode='widthFix'></image> -->
