--- a/miniprogram/pages/newDiary/newDiary.wxss
+++ b/miniprogram/pages/newDiary/newDiary.wxss
@@ -15,9 +15,14 @@ page {
   width: 100rpx;
 }
 .bottom {
-  height: 100rpx;
-  width: 100rpx;
-  position: fixed;
-  bottom: 0;
-  right: 0;
+  height: 28px;
+  line-height: 28px;
+  width: 48px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  text-align: center;
+  background-color: #d9e895;  
+  color: #fff;
+  border-radius: 4px;
 }
