--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,6 +1,30 @@
 <!--index.wxml-->
 <bgCanvas></bgCanvas>
 <view class="container">
+
+	<view class="cu-modal {{modalName=='Modal'?'show':''}}">
+		<view class="cu-dialog watering">
+		  <view class="cu-bar bg-white justify-end">
+			<view class="content">温馨小提示</view>
+			<view class="action" bindtap="hideModal">
+			  <text class="cuIcon-close text-red"></text>
+			</view>
+		  </view>
+		  <view class="padding"
+		 	style="text-align: left;" 
+		  >
+			  <text class="title">不要忘记给心爱的多肉浇水哦</text>
+			 <view
+			 	wx:for="{{watheringList}}" wx:key="*this"
+			 >
+				您的 {{item.plant}}  {{item.watering}} 该浇水啦 
+			 </view
+			 >
+
+		  </view>
+		</view>
+	  </view>
+
 	<view class="header">
 		<text>多肉日记本</text>
 		<cover-image class="imgIcon" src="https://yanglq.xyz/images/plantIcon/duorouduocai.png"></cover-image>
@@ -30,6 +54,7 @@
 	>
 		<text class="iconfont icon-add-fill" style="color:rgba(153, 191, 76, 0.871)"></text>
 		<text class="colorgradient">来写一篇日记吧~</text>
+
 		<view class="cu-form-group"
 			style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;min-height: 0;opacity: 0;"
 		>
