--- a/miniprogram/pages/viewDiary/viewDiary.wxml
+++ b/miniprogram/pages/viewDiary/viewDiary.wxml
@@ -11,8 +11,10 @@
         </view>
     </view>
     <!-- 正文 -->
-    <view class="cu-form-group textarea margin-top">
-        {{diary.content}}
+    <view class="cu-form-group textarea margin-top" >
+        <text style="height: 570rpx;font-size: 30rpx;">
+            {{diary.content}}
+        </text>
     </view>
     <!-- 图片 -->
     <view class="cu-bar bg-white margin-top">
@@ -27,10 +29,7 @@
     <view class="cu-form-group">
         <view class="grid col-4 grid-square flex-sub">
             <view class="bg-img" wx:for="{{diary.imgList}}" wx:for-item="item" wx:key="*this">
-                <image src="{{item}}" data-index="{{index}}" mode='aspectFill'></image>
-                <view class="cu-tag bg-red" data-index="{{index}}">
-                    <text class="cuIcon-close"></text>
-                </view>
+                <image src="http://yanglq.xyz:4430{{item.picUrl}}" data-index="{{index}}" mode='aspectFill'></image>
             </view>
         </view>
     </view>
