--- a/miniprogram/pages/authorize/authorize.wxml
+++ b/miniprogram/pages/authorize/authorize.wxml
@@ -1,8 +1,13 @@
 <bgCanvas></bgCanvas>
 <view class="container">
-    <view class="header">
-        <text>多肉日记本</text>
-        <cover-image class="imgIcon" src="https://yanglq.xyz/images/plantIcon/duorouduocai.png"></cover-image>
-    </view>
-    <button class="bg-gradual-green margin-top-xxxxl radius" open-type="getUserInfo" bindgetuserinfo="getUserInfo">开始使用</button>
+    <view
+        style="text-align: center;font-size: 25px;color: #9fbb23;padding-top: 300rpx;"
+    >
+        欢迎使用多肉日记本
+    </view
+
+    >
+    <button class="bg-gradual-green radius" open-type="getUserInfo" 
+    style="margin-top: 200rpx;"
+    bindgetuserinfo="getUserInfo">开始使用</button>
 </view>
