--- a/miniprogram/pages/newDiary/newDiary.wxss
+++ b/miniprogram/pages/newDiary/newDiary.wxss
@@ -19,8 +19,8 @@ page {
   line-height: 28px;
   width: 48px;
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 30rpx;
+  right: 30rpx;
   text-align: center;
   background-color: #d9e895;  
   color: #fff;
